taass/backupProgetto/Pogetto-TAASS(michele)/Spikes/Spike Kubernetes/other/mongoDB/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-origins: "http://mongo.example.com.192.168.49.2.nip.io"
    nginx.ingress.kubernetes.io/cors-methods: PUT, DELETE, POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, Origin
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://mongo.example.com.192.168.49.2.nip.io"
  name: mongo-ingress
spec:
  rules:
  - host: mongo.example.com.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-service
            port:
              number: 27017
